# gmailk-V

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  deepsort.c  envsetup.sh  main.c  main.cpp  tracking_and_recognition_plan.md  tracking_recognition_plan_v2.md
docs/lang/: README_ch.md
include/: button_handler.h  draw_utils.h  oled_handler.h  shared_data.h  system_init.h  tdl_handler.h  venc_handler.h
src/: button_handler.cpp  config.cpp  init.c  init.h  main.cpp  oled_handler.cpp  shared_data.cpp  system_init.cpp  tdl_handler.cpp  venc_handler.cpp
tools/: build_ncnn.sh  build_opencv.sh  common.cmake  riscv-toolchain.cmake
wiringx-blink/: blink.c
